--- a/content/posts/20230626.md
+++ b/content/posts/20230626.md
@@ -1,8 +1,14 @@
----
-date: "2023-06-26"
-tags: "Something"
-categories: "Diary"
----
++++
+title = "06.26"
+date = "2023-26-26"
+description = "第一篇"
+tags = [
+    "diary"
+]
+categories = [
+    "diary",
+]
++++
 ## 今天开始拥有了自己的mini博客！
 大概会在这里记录一下自己学了些什么内容。
 库啵~
