--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -13,7 +13,7 @@ categories = [
 
 ## MouseEvent - 鼠标事件
 
-{{<highlight react>}}
+{{<highlight html>}}
 
 <div
   onClick={e => console.log('onClick')}
@@ -24,4 +24,4 @@ categories = [
   onMouseLeave={e => console.log('onMouseLeave')}
 />
 
-{{</highlight react>}}
+{{</highlight html>}}
