--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -13,10 +13,12 @@ categories = [
 
 ## MouseEvent - 鼠标事件
 
-{{< highlight html >}}
-
+{{< highlight react >}}
+function handleClick() {
+    console.log('onClick)
+}
 <div
-  onClick={e => console.log('onClick')}
+  onClick={e => handleClick}
   onMouseEnter={e => console.log('onMouseEnter')}
   onMouseOver={e => console.log('onMouseOver')}
   onMouseDown={e => console.log('onMouseDown')}
