--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -15,7 +15,7 @@ categories = [
 
 {{< highlight react >}}
 function handleClick() {
-    console.log('onClick)
+    console.log('onClick')
 }
 <div
   onClick={e => handleClick}
