--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -18,7 +18,7 @@ function handleClick() {
     console.log('onClick')
 }
 <div
-  onClick={e => handleClick}
+  onClick=handleClick
   onMouseEnter={e => console.log('onMouseEnter')}
   onMouseOver={e => console.log('onMouseOver')}
   onMouseDown={e => console.log('onMouseDown')}
