--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -13,11 +13,11 @@ categories = [
 
 ## MouseEvent - 鼠标事件
 
-{{< highlight html >}}
+{{< highlight react >}}
 function handleClick() {
     console.log('onClick')
 }
-<div
+<button
   onClick=handleClick
   onMouseEnter={e => console.log('onMouseEnter')}
   onMouseOver={e => console.log('onMouseOver')}
@@ -25,5 +25,13 @@ function handleClick() {
   onMouseUp={e => console.log('onMouseUp')}
   onMouseLeave={e => console.log('onMouseLeave')}
 />
-
 {{< /highlight >}}
+
+<button
+  onClick=handleClick
+  onMouseEnter={e => console.log('onMouseEnter')}
+  onMouseOver={e => console.log('onMouseOver')}
+  onMouseDown={e => console.log('onMouseDown')}
+  onMouseUp={e => console.log('onMouseUp')}
+  onMouseLeave={e => console.log('onMouseLeave')}
+/>
