--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -18,13 +18,20 @@ function handleClick() {
     console.log('onClick')
 }
 <button
-  onClick=handleClick
+  onClick={handleClick}
   onMouseEnter={e => console.log('onMouseEnter')}
   onMouseOver={e => console.log('onMouseOver')}
   onMouseDown={e => console.log('onMouseDown')}
   onMouseUp={e => console.log('onMouseUp')}
   onMouseLeave={e => console.log('onMouseLeave')}
 />
+
+Math.floor()
+// -1.1: -2  3.3: 3  5.4: 5 （向下取比它小的最大一个整数）
+Math.random()
+// [0, 1)
+Math.floor(Math.random() * arrayA.length)
+
 {{< /highlight >}}
 
 
