--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -25,12 +25,17 @@ function handleClick() {
   onMouseUp={e => console.log('onMouseUp')}
   onMouseLeave={e => console.log('onMouseLeave')}
 />
+{{< /highlight >}}
 
+## Math.floor() 与 Math.random()
+
+{{< highlight react >}}
 Math.floor()
 // -1.1: -2  3.3: 3  5.4: 5 （向下取比它小的最大一个整数）
 Math.random()
 // [0, 1)
-Math.floor(Math.random() * arrayA.length)
+const randomNumber = Math.floor(Math.random() * arrayA.length)
+const url = arrayA[randomNumber].url
 
 {{< /highlight >}}
 
