--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -35,7 +35,7 @@ Math.floor()
 Math.random()
 // [0, 1)
 const randomNumber = Math.floor(Math.random() * arrayA.length)
-const url = arrayA[randomNumber].url
+url = arrayA[randomNumber].url
 
 {{< /highlight >}}
 
