--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -36,7 +36,25 @@ Math.random()
 // [0, 1)
 const randomNumber = Math.floor(Math.random() * arrayA.length)
 url = arrayA[randomNumber].url
+{{< /highlight >}}
 
+
+## React.useState()
+{{< highlight react >}}
+export default function App() {
+    let [count, changeCount] = React.useState(0)
+    function counterMinus() {
+        changeCount(count -= 1)
+    }
+    function counterPlus() {
+        changeCount(count += 1)
+    }
+    return (
+        <button onClick={counterMinus}>-</button>
+            <div><h1>{count}</h1></div>
+        <button onClick={counterPlus}>+</button>
+    )
+}
 {{< /highlight >}}
 
 
