--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -42,17 +42,17 @@ url = arrayA[randomNumber].url
 ## React.useState()
 {{< highlight react >}}
 export default function App() {
-    let [count, changeCount] = React.useState(0)
-    function counterMinus() {
-        changeCount(count -= 1)
+    const [count, changeCount] = React.useState(0)
+    function add() {
+        changeCount(count - 1)
     }
-    function counterPlus() {
-        changeCount(count += 1)
+    function subtract() {
+        changeCount(count + 1)
     }
     return (
-        <button onClick={counterMinus}>-</button>
+        <button onClick={subtract}>-</button>
             <div><h1>{count}</h1></div>
-        <button onClick={counterPlus}>+</button>
+        <button onClick={add}>+</button>
     )
 }
 {{< /highlight >}}
