--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -38,16 +38,23 @@ const randomNumber = Math.floor(Math.random() * arrayA.length)
 url = arrayA[randomNumber].url
 {{< /highlight >}}
 
-
+# state
 ## React.useState()
 {{< highlight react >}}
+const [count, changeCount] = React.useState(0)
+console.log(count, changeCount)
+// 0 f()
+{{< /highlight >}}
+
+## Changing state with a callback function
+{{< highlight react >}}
 export default function App() {
-    const [count, changeCount] = React.useState(0)
+    const [count, setCount] = React.useState(0)
     function add() {
-        changeCount(count - 1)
+        setCount(prevCount => prevCount + 1)
     }
     function subtract() {
-        changeCount(count + 1)
+        setCount(prevCount => prevCount - 1)
     }
     return (
         <button onClick={subtract}>-</button>
