--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -67,4 +67,10 @@ export default function App() {
 }
 {{< /highlight >}}
 
+### 2 options for what you can pass into a state setter function:
+1. New value of state - setCount(42)
+2. Callback function - whatever the call back function returns === new value of state
+
+
+
 
