--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -38,9 +38,9 @@ const randomNumber = Math.floor(Math.random() * arrayA.length)
 url = arrayA[randomNumber].url
 {{< /highlight >}}
 
-# state
+## state
 
-## React.useState()
+### React.useState()
 
 {{< highlight react >}}
 const [count, changeCount] = React.useState(0)
@@ -48,7 +48,7 @@ console.log(count, changeCount)
 // 0 f()
 {{< /highlight >}}
 
-## Changing state with a callback function
+### Changing state with a callback function
 
 {{< highlight react >}}
 export default function App() {
