--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -70,7 +70,7 @@ export default function App() {
 ###### 2 options for what you can pass into a state setter function:
 1. New value of state - setCount(42)
 2. Callback function - whatever the call back function returns === new value of state
-
+    - setCount(prevCount => prevCount + 1)
 
 
 
