--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -11,6 +11,8 @@ categories = [
 ]
 +++
 
+[toc]
+
 ## MouseEvent - 鼠标事件
 
 {{< highlight react >}}
@@ -68,9 +70,10 @@ export default function App() {
 {{< /highlight >}}
 
 ###### 2 options for what you can pass into a state setter function:
-1. New value of state - setCount(42)
+1. New value of state - *setCount(42)*
 2. Callback function - whatever the call back function returns === new value of state
-    - setCount(prevCount => prevCount + 1)
+    - *setCount(prevCount => prevCount + 1)*
+
 
 
 
