--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -67,10 +67,20 @@ export default function App() {
 }
 {{< /highlight >}}
 
+#### Code Description
+    const [count, setCount] = React.useState(0)
+    // set count to 0.
+
+    const [memeImage, setMemeImage] = React.useState("")
+    // set memeImage to an empty string
+
+
 ###### 2 options for what you can pass into a state setter function:
-1. New value of state - *setCount(42)*
+1. New value of state - `setCount(42)`
 2. Callback function - whatever the call back function returns === new value of state
-    - *setCount(prevCount => prevCount + 1)*
+   `setCount(prevCount => prevCount + 1)`
+
+1
 
 
 
