--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -67,7 +67,7 @@ export default function App() {
 }
 {{< /highlight >}}
 
-**Code Description**
+###### Code Description
     const [count, setCount] = React.useState(0)
     // set count to 0.
 
@@ -80,8 +80,20 @@ export default function App() {
 2. Callback function - whatever the call back function returns === new value of state
    `setCount(prevCount => prevCount + 1)`
 
-1
 
+### Using conditional (ternary) operator
+https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Conditional_Operator
 
+{{< highlight react >}}
+const [isGoingOut, setIsGoingOut] = React.useState(true)
+function changeMind() {
+    setIsGoingOut(prevState => !prevState)
+}
+return (
+    <div onClick={changeMind}>
+        <h1>{isGoingOut ? "YES" : "NO"}</h1>
+    </div>
+)
+{{< /highlight >}}
 
 
