--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -67,7 +67,7 @@ export default function App() {
 }
 {{< /highlight >}}
 
-###### Code Description
+###### Code description
     const [count, setCount] = React.useState(0)
     // set count to 0.
 
@@ -96,4 +96,9 @@ return (
 )
 {{< /highlight >}}
 
+###### Code description
+```
+setIsGoingOut(prevState => !prevState)
+// if 'isGoigOut' is true, set it to false, otherwise, set it to true.
+```
 
