--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -97,8 +97,7 @@ return (
 {{< /highlight >}}
 
 ###### Code description
-```
-setIsGoingOut(prevState => !prevState)
-// if 'isGoigOut' is true, set it to false, otherwise, set it to true.
-```
+`setIsGoingOut(prevState => !prevState)`
+if 'isGoigOut' is true, set it to false, otherwise, set it to true.
+
 
