--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -68,11 +68,11 @@ export default function App() {
 {{< /highlight >}}
 
 ###### Code description
-    const [count, setCount] = React.useState(0)
-    // set count to 0.
+1. `const [count, setCount] = React.useState(0)`
+   set count to 0.
 
-    const [memeImage, setMemeImage] = React.useState("")
-    // set memeImage to an empty string
+2. `const [memeImage, setMemeImage] = React.useState("")`
+    set memeImage to an empty string
 
 
 ###### 2 options for what you can pass into a state setter function
