--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -108,3 +108,17 @@ return (
 if 'isGoigOut' is true, set it to false, otherwise, set it to true.
 
 
+## Complex state
+### arrays
+{{< highlight react >}}
+const [thingsArray, setThingsArray] = React.useState("Thing 1", "Thing 2")
+function addItem() {
+    setThingsArray(prevThingsArray => {
+        return [...prevThingsArray, `Thing ${prevThingsArray.length + 1}`]
+    })
+}
+const thingsElements = thingsArray.map(thing => <p key={thing}>{thing}</p>)
+{{< /highlight>}}
+
+    return [...prevThingsArray, "new thing"]
+Adding "new thing" to thingsArray as a new element
