--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -120,8 +120,8 @@ function addItem() {
 const thingsElements = thingsArray.map(thing => <p key={thing}>{thing}</p>)
 {{< /highlight>}}
 
-`return [...prevThingsArray, "new thing"]`
-- Adding "new thing" to thingsArray as a new element
+- `return [...prevThingsArray, "new thing"]`
+  Adding "new thing" to thingsArray as a new element
 
 
 
