--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -70,12 +70,10 @@ export default function App() {
 ###### Code description
 
 1. `const [count, setCount] = React.useState(0)`
-   
-   set count to 0
+set count to 0
 
 2. `const [memeImage, setMemeImage] = React.useState("")`
-    
-    set memeImage to an empty string
+set memeImage to an empty string
 
 
 ###### 2 options for what you can pass into a state setter function
@@ -121,7 +119,7 @@ const thingsElements = thingsArray.map(thing => <p key={thing}>{thing}</p>)
 {{< /highlight>}}
 
 - `return [...prevThingsArray, "new thing"]`
-  Adding "new thing" to thingsArray as a new element
+  - Adding "new thing" to thingsArray as a new element
 
 
 
