--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -101,9 +101,8 @@ return (
 
 ###### Code description
 
-`setIsGoingOut(prevState => !prevState)`
-
-if 'isGoigOut' is true, set it to false, otherwise, set it to true.
+- `setIsGoingOut(prevState => !prevState)`
+  - if 'isGoigOut' is true, set it to false, otherwise, set it to true.
 
 
 ## Complex state
@@ -121,5 +120,12 @@ const thingsElements = thingsArray.map(thing => <p key={thing}>{thing}</p>)
 - `return [...prevThingsArray, "new thing"]`
   - Adding "new thing" to thingsArray as a new element
 
-
+- `setArray(prevArray => [...prevArray, 123])`
+and
+```
+setArray(prevArray => {
+    return [...prevArray, 123]
+})
+```
+are the same.
 
