--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -69,11 +69,9 @@ export default function App() {
 
 ###### Code description
 
-- `const [count, setCount] = React.useState(0)`
-  - set count to 0
+1. `const [count, setCount] = React.useState(0)` - set count to 0
 
-- `const [memeImage, setMemeImage] = React.useState("")`
-  - set memeImage to an empty string
+2. `const [memeImage, setMemeImage] = React.useState("")` - set memeImage to an empty string
 
 
 ###### 2 options for what you can pass into a state setter function
@@ -120,7 +118,7 @@ const thingsElements = thingsArray.map(thing => <p key={thing}>{thing}</p>)
 - `return [...prevThingsArray, "new thing"]`
   - Adding "new thing" to thingsArray as a new element
 
-- 
+
 `setArray(prevArray => [...prevArray, 123])`
 
 and
