--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -69,8 +69,10 @@ export default function App() {
 
 ###### Code description
 
-1. `const [count, setCount] = React.useState(0)` - set count to 0
-2. `const [memeImage, setMemeImage] = React.useState("")` - set memeImage to an empty string
+1. `const [count, setCount] = React.useState(0)`
+   set count to 0
+2. `const [memeImage, setMemeImage] = React.useState("")`
+   set memeImage to an empty string
 
 
 ###### 2 options for what you can pass into a state setter function
