--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -70,9 +70,9 @@ export default function App() {
 ###### Code description
 
 1. `const [count, setCount] = React.useState(0)`
-   set count to 0
+   - set count to 0
 2. `const [memeImage, setMemeImage] = React.useState("")`
-    set memeImage to an empty string
+   - set memeImage to an empty string
 
 
 ###### 2 options for what you can pass into a state setter function
@@ -116,17 +116,17 @@ function addItem() {
 const thingsElements = thingsArray.map(thing => <p key={thing}>{thing}</p>)
 {{< /highlight>}}
 
-- `return [...prevThingsArray, "new thing"]`
-  - Adding "new thing" to thingsArray as a new element
+1. `return [...prevThingsArray, "new thing"]`
+   - Adding "new thing" to thingsArray as a new element
 
 
-`setArray(prevArray => [...prevArray, 123])`
-
-and
-```
-setArray(prevArray => {
-    return [...prevArray, 123]
-})
-```
-are the same.
+2. 
+    `setArray(prevArray => [...prevArray, 123])`
+    and
+    ```
+    setArray(prevArray => {
+        return [...prevArray, 123]
+    })
+    ```
+    are the same.
 
