--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -118,8 +118,7 @@ const thingsElements = thingsArray.map(thing => <p key={thing}>{thing}</p>)
 
 1. `return [...prevThingsArray, "new thing"]`
    - Adding "new thing" to thingsArray as a new element
-2. 
-    `setArray(prevArray => [...prevArray, 123])` and
+2. `setArray(prevArray => [...prevArray, 123])` and
     ```
     setArray(prevArray => {
         return [...prevArray, 123]
