--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -126,4 +126,36 @@ const thingsElements = thingsArray.map(thing => <p key={thing}>{thing}</p>)
     ```
     are the same.
 
+### objects
+{{< highlight react >}}
+const [contact, setContact] = React.useState({
+    firstName: "John",
+    lastName: "Doe",
+    phone: "+1 (719) 555-1212",
+    email: "itsmyrealname@example.com",
+    isFavorite: false
+})
+let starIcon = contact.isFavorite ? "star-filled.png" : "star-empty.png"
+function toggleFavorite() {
+    setContact(prevContact => {
+        return {
+            ...prevContact,
+            isFavorite: !prevContact.isFavorite
+        }
+    })
+}
 
+<img src={`../images/${starIcon}`} onClick={toggleFavorite}>
+
+1. `const [objectA, setObject] = React.useState({ key1: "123", key2: false })`
+   - set objectA to an object {key1: "123", key2: false}
+2.  ```
+    setObject(prevObject => {
+        return {
+            ...prevObject,
+            key2: !key2
+        }
+    })
+    ```
+**{...prevObject, keyN: xxxx}**
+**[...prevArray, newValue]**
