--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -144,6 +144,7 @@ function toggleFavorite() {
         }
     })
 }
+{{< /highlight >}}
 
 <img src={`../images/${starIcon}`} onClick={toggleFavorite}>
 
