--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -144,9 +144,8 @@ function toggleFavorite() {
         }
     })
 }
-{{< /highlight >}}
-
 <img src={`../images/${starIcon}`} onClick={toggleFavorite}>
+{{< /highlight >}}
 
 1. `const [objectA, setObject] = React.useState({ key1: "123", key2: false })`
    - set objectA to an object {key1: "123", key2: false}
@@ -154,10 +153,12 @@ function toggleFavorite() {
     setObject(prevObject => {
         return {
             ...prevObject,
-            key2: !key2
+            key2: !prevObject.key2
         }
     })
     ```
     **{...prevObject, keyN: xxxx}**
     
     **[...prevArray, newValue]**
+
+
