--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -157,6 +157,15 @@ function toggleFavorite() {
         }
     })
     ```
+    and
+    ```
+    setObject(prevObject => ({
+        ...prevObject,
+        key2: !prevObject.key2
+    }))
+    ```
+    are the same.
+
     **{...prevObject, keyN: xxxx}**
     
     **[...prevArray, newValue]**
