--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -171,3 +171,37 @@ function toggleFavorite() {
     **[...prevArray, newValue]**
 
 
+## State and Components
+App.js
+{{< highlight react >}}
+import Star from "./Star"
+// App():
+const [contact, setContact] = React.useState({
+    name: "John",
+    isFavorite: false
+})
+function toggleFavorite() {
+    setContact(prevContact => ({
+        ...prevContact,
+        isFavorite: !prevContact.isFavorite
+    }))
+}
+// return():
+<Star isFilled={contact.isFavorite} />
+
+{{< /highlight >}}
+Star.js
+{{< highlight react >}}
+export default function Star(props) {
+    const starIcon = props.isFilled ? "1.jpg" : "2.jpg"
+    return (
+        <img
+            src={`../images/${starIcon}`}
+            className="card--favorite"
+        />
+    )
+}
+
+{{< /highlight>}}
+
+
