--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -3,7 +3,8 @@ title = "React学习笔记"
 date = "2024-01-10"
 description = ""
 tags = [
-    "study"
+    "study",
+    "React"
 ]
 categories = [
     "study",
@@ -187,7 +188,7 @@ function toggleFavorite() {
     }))
 }
 // return():
-<Star isFilled={contact.isFavorite} />
+<Star isFilled={contact.isFavorite} handleClick={toggleFavorite}/>
 
 {{< /highlight >}}
 Star.js
@@ -198,10 +199,18 @@ export default function Star(props) {
         <img
             src={`../images/${starIcon}`}
             className="card--favorite"
+            onClick={props.handleClick}
         />
     )
 }
 
 {{< /highlight>}}
+
+###### Code description
+- Creating a property 'handleClick' for Star component - `<img onClick={props.handleClick}`
+- Setting property 'handleClick' to the function toggleFavorite() - `<Star handleClick={toggleFavorite}`
+- There is not a property 'onClick' in a custom component, but there is a property 'onClick' in a DOM component, such as <img />
+
+
 
 
