--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -173,7 +173,8 @@ function toggleFavorite() {
 
 
 ## State and Components
-App.js
+#### Example 1 个人卡片
+**App.js**
 {{< highlight react >}}
 import Star from "./Star"
 // App():
@@ -189,9 +190,9 @@ function toggleFavorite() {
 }
 // return():
 <Star isFilled={contact.isFavorite} handleClick={toggleFavorite}/>
-
 {{< /highlight >}}
-Star.js
+
+**Star.js**
 {{< highlight react >}}
 export default function Star(props) {
     const starIcon = props.isFilled ? "1.jpg" : "2.jpg"
@@ -210,6 +211,42 @@ export default function Star(props) {
 - Creating a property 'handleClick' for Star component - `<img onClick={props.handleClick}`
 - Setting property 'handleClick' to the function toggleFavorite() - `<Star handleClick={toggleFavorite}`
 - There is not a property 'onClick' in a custom component, but there is a property 'onClick' in a DOM component, such as <img />
+
+
+#### Example 2 Boxes challenge
+##### Local state
+**Box.js**
+{{< highlight React >}}
+export default function Box(props) {
+    const [on, setOn] = React.useState(props.on)
+    const styles = {
+        backgroundColor: on ? "#222222" : "transparent"
+    }
+    function toggle() {
+        setOn(prevOn => !prevOn)
+    }
+    return (
+        <div style={style} className="box" onClick={toggle}></div>
+    )
+}
+{{< /highlight >}}
+
+**App.js**
+{{< highlight react >}}
+import Box from "./Box"
+export default function App() {
+    const [squares, setSquares] = React.useState(boxes)
+    const squareElements = squares.map(suqare => (
+        <Box key={square.id} on={square.on} />
+    ))
+    return (
+        <main>
+            {squareElements}
+        </main>
+    )
+}
+{{< /highlight >}}
+
 
 
 
