--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -248,6 +248,39 @@ export default function App() {
 {{< /highlight >}}
 
 
+##### local function
+**Box.js**
+{{< highlight react >}}
+export default function Box(props) {
+    const styles = {
+        backgroundColor: props.on ? "#222222" : "transparent"
+    }
+    return (
+        <div
+            style={styles}
+            className="box"
+            onClick={props.toggle}
+        >
+        </div>
+    )
+}
+{{< /highlight >}}
+
+**App.js**
+{{< highlight react >}}
+// App():
+const [squares, setSquares] = React.useState(boxes)
+function toggle(id) {
+    setSquares(prevSquares => {
+        return prevSquares.map((square) => {
+            return square.id === id ? {...square, on: !square.on} : square
+        })
+    })
+}
+{{< /highlight >}}
+
+
+
 
 
 
