--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -267,8 +267,8 @@ export default function Box(props) {
 {{< /highlight >}}
 
 **App.js**
+App():
 {{< highlight react >}}
-// App():
 const [squares, setSquares] = React.useState(boxes)
 function toggle(id) {
     setSquares(prevSquares => {
@@ -278,7 +278,19 @@ function toggle(id) {
     })
 }
 {{< /highlight >}}
-
+<Box />:
+{{< highlight react >}}
+const squareElements = squares.map(square => (
+    <Box
+        key={square.id}
+        on={square.on}
+        toggle={() => toggle(square.id)}
+    >
+))
+return (
+    <main>{squareElements}</main>
+)
+{{< /highlight >}}
 
 
 
