--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -267,6 +267,7 @@ export default function Box(props) {
 {{< /highlight >}}
 
 **App.js**
+
 App():
 {{< highlight react >}}
 const [squares, setSquares] = React.useState(boxes)
@@ -278,7 +279,9 @@ function toggle(id) {
     })
 }
 {{< /highlight >}}
-<Box />:
+
+Box:
+
 {{< highlight react >}}
 const squareElements = squares.map(square => (
     <Box
