--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -296,6 +296,45 @@ return (
 {{< /highlight >}}
 
 
+## Conditional rendering: &&
+**Example 1: Joke.js**
+{{< highlight react >}}
+const [isShown, setIsShown] = React.useState(false)
+function toggleShown() {
+    setIsShown(prevShown => !prevShown)
+}
+<div>
+    {
+        isShown && 
+        <p>{props.punchline}</p>
+    }
+    <button onClick={toggleShown}>Show Punchline</button>
+</div>
+{{< /highlight >}}
+
+- If isShown === true: rendering <p>
+- If isShown === false: rendering nothing
+
+**Example 2: message(s)**
+{{< highlight react >}}
+// App():
+const [messages, setMessages] = React.useState(["a", "b"])
+return (
+    <div>
+        {
+            message.length === 0 ?
+            <h1>You're all caught up!</h1> :
+            <h1>
+                You have {messages.length} unread {message.length > 1 ? "messages" : "message"}
+            </h1>
+        }
+    </div>
+)
+
+{{< /highlight >}}
+
+
+## Forms
 
 
 
