--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -335,6 +335,51 @@ return (
 
 
 ## Forms
+- link 1: https://developer.mozilla.org/en-US/docs/Web/HTML/Element/form
+- link 2: https://react.dev/reference/react-dom/components/form
 
+### A simple example
+**what is event.target.value**
+{{< highlight react >}}
+const[name, setName] = React.useState("")
+function handleChange(event) {
+    setName(event.target.value)
+}
+return (
+    <form>
+        <input
+            type="text"
+            placeholder="Name"
+            onChange={handleChange}
+        />
+    </form>
+)
+{{< /highlight >}}
+
+- `event.target`: <input ...... />
+- `event.target.value`: What you entered in the input field
+
+
+**forms & state object**
+{{< highlight react >}}
+// Form():
+const [formData, setFormData] = React.useState({
+    firstName: "",
+    lastName: ""
+})
+function handleChange(event) {
+    setFormData(prevFormData) => {
+        return {
+            ...prevFormData,
+            [event.target.name]: event.target.value
+        }
+    }
+}
+// return():
+<form>
+    <input type="text" placeholder="First Name" onChange={handleChange} name="firstName" />
+    <input type="text" placeholder="Last Name" onChange={handleChange} name="lastName" />
+    <h1>{formData.firstName} {formData.lastName}</h1>
+</form>
 
 
