--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -383,6 +383,58 @@ function handleChange(event) {
 </form>
 {{< /highlight >}}
 
+- `[event.target.name]: event.target.value`: set the key which is "event.target.name" to value "event.target.value"
+
+
+### Controlled inputs
+- link: https://legacy.reactjs.org/docs/forms.html#controlled-components
+`<input type="text" placeholder="email" onChange={handleChange} name="email" value={formData.email}`
+
+### Forms in React
+#### Textarea
+{{< highlight react >}}
+const [formData, setFormData] = React.useState({
+    firstName: "", lastName: "", email: "", comments: ""
+})
+<form>
+    <textarea
+        value={formData.comments}
+        placeholder="Comments"
+        onChange={handleChange}
+        name="comments"
+    />
+</form>
+{{< /highlight >}}
+
+#### Checkbox
+- `htmlFor`: A string. For `<label>` and `<output>`, lets you associate the label with some control. Same as for HTML attribute. React uses the standard DOM property names (`htmlFor`) instead of HTML attribute names.
+
+{{< highlight react >}}
+// Form(): useState():
+isFriendly: true
+handleChange(event) {
+    const {name, value, type, checked} = event.target
+    setFormData(prevFormData) => {
+        return {
+            ...prevFormData,
+            [name]: type === "checkbox" ? checked : value
+        }
+    }
+}
+// return():
+<form>
+    <input 
+        type="checkbox"
+        id="isFriendly"
+        checked={formData.isFriendly}
+        onChange={handleChange}
+        name="isFriendly"
+    />
+    <label htmlFor="isFriendly">Are you friendly?</label>
+</form>
+{{< /highlight >}}
+
+
 
 
 
