--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -1,5 +1,5 @@
 +++
-title = "React学习笔记"
+title = "React学习笔记: PART 1"
 date = "2024-01-10"
 description = ""
 tags = [
@@ -388,6 +388,7 @@ function handleChange(event) {
 
 ### Controlled inputs
 - link: https://legacy.reactjs.org/docs/forms.html#controlled-components
+
 `<input type="text" placeholder="email" onChange={handleChange} name="email" value={formData.email}`
 
 ### Forms in React
@@ -434,8 +435,35 @@ handleChange(event) {
 </form>
 {{< /highlight >}}
 
-
-
+#### Radio buttons
+```react
+// return():
+<form>
+    <fieldset>
+        <legend>Current employment status</legend>
+        <input 
+            type="radio"
+            id="unemployed"
+            name="employment"
+            value="unemployed"
+            checked={formData.employment === "unemployed"}
+            onChange={handleChange}
+        />
+        <label htmlFor="unemployed">Unemployed</label>
+        <br />
+        <input 
+            type="radio"
+            id="part-time"
+            name="employment"
+            value="part-time"
+            checked={formData.employment === "part-time"}
+            onChange={handleChange}
+        />
+        <label htmlFor="part-time">Part-time</label>
+        <br />
+    </fieldset>
+</form>
+```
 
 
 
