--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -465,6 +465,30 @@ handleChange(event) {
 </form>
 ```
 
+#### Select & Option
+下拉菜单
+```react
+<form>
+    <label htmlFor="favColor">What is your favorite color?</label>
+    <br />
+    <select
+        id="favColor"
+        value={formData.favColor}
+        onChange={handleChange}
+        name="favColor"
+    >
+        <option value="">-- Choose --</option>
+        <option value="red">Red</option>
+        <option value="blue">Blue</option>
+    </select>
+</form>
+```
+
+#### Submitting the form
+Inside the `<form></form>`:
+`<button type="submit">Submit</button>`
+
+
 
 
 
