--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -393,7 +393,7 @@ function handleChange(event) {
 
 ### Forms in React
 #### Textarea
-{{< highlight react >}}
+```react
 const [formData, setFormData] = React.useState({
     firstName: "", lastName: "", email: "", comments: ""
 })
@@ -405,12 +405,12 @@ const [formData, setFormData] = React.useState({
         name="comments"
     />
 </form>
-{{< /highlight >}}
+```
 
 #### Checkbox
 - `htmlFor`: A string. For `<label>` and `<output>`, lets you associate the label with some control. Same as for HTML attribute. React uses the standard DOM property names (`htmlFor`) instead of HTML attribute names.
 
-{{< highlight react >}}
+```react
 // Form(): useState():
 isFriendly: true
 handleChange(event) {
@@ -433,7 +433,7 @@ handleChange(event) {
     />
     <label htmlFor="isFriendly">Are you friendly?</label>
 </form>
-{{< /highlight >}}
+```
 
 #### Radio buttons
 ```react
@@ -485,8 +485,17 @@ handleChange(event) {
 ```
 
 #### Submitting the form
-Inside the `<form></form>`:
-`<button type="submit">Submit</button>`
+```react
+function handleSubmit(event) {
+    event.preventDefault()
+    submitToApi(formData)
+}
+return (
+    <form onSubmit={handleSubmit}>
+        <button type="submit">Submit</button>
+    </form>
+)
+```
 
 
 
