--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -413,7 +413,7 @@ const [formData, setFormData] = React.useState({
 ```react
 // Form(): useState():
 isFriendly: true
-handleChange(event) {
+function handleChange(event) {
     const {name, value, type, checked} = event.target
     setFormData(prevFormData) => {
         return {
@@ -496,6 +496,35 @@ return (
     </form>
 )
 ```
+
+### useID
+- link: https://react.dev/reference/react/useId#
+
+### An example of an input field and a checkbox
+```react
+<form className="form" onSubmit={handleSubmit}>
+    <input 
+        type="password"
+        placeholder="Password"
+        className="form--input"
+        name="password"
+        onChange={hancleChange}
+        value={formData.password}
+    />
+    <div className="form--marketing">
+        <input 
+            type="checkbox"
+            id="okayToEmail"
+            name="okayToEmail"
+            onChange={handleChange}
+            value={formData.okayToEmail}
+        />
+        <label htmlFor="okayToEmail">I want to join the newsletters</label>
+    </div>
+</form>
+```
+
+
 
 
 
