--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -525,6 +525,25 @@ return (
 ```
 
 
+## Making API calls
+1. GET the data (fetch)
+```react
+fetch("https://swaip.dev/api/people/1")
+    .then(res => res.json())
+    .then(data => console.log(data))
+```
+- This will console.log all the data.
+
+2. Save the data to state
+```react
+const [starWarsData, setStarWarsData] = React.useState({})
+...
+return (
+    <div>
+        <pre>{JSON.stringify(starWarsData, null, 2)}</pre>
+    </div>
+)
+```
 
 
 
