--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -526,7 +526,7 @@ return (
 
 
 ## Making API calls
-1. GET the data (fetch)
+**1. GET the data (fetch)**
 ```react
 fetch("https://swaip.dev/api/people/1")
     .then(res => res.json())
@@ -534,7 +534,7 @@ fetch("https://swaip.dev/api/people/1")
 ```
 - This will console.log all the data.
 
-2. Save the data to state
+**2. Save the data to state**
 ```react
 const [starWarsData, setStarWarsData] = React.useState({})
 ...
@@ -545,6 +545,10 @@ return (
 )
 ```
 
+## useEffect
+- link 1: https://legacy.reactjs.org/docs/hooks-effect.html
+- link 2: https://overreacted.io/a-complete-guide-to-useeffect/
+- 
 
 
 
