--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -545,10 +545,28 @@ return (
 )
 ```
 
-## useEffect
+## useEffect - handle side effects
 - link 1: https://legacy.reactjs.org/docs/hooks-effect.html
 - link 2: https://overreacted.io/a-complete-guide-to-useeffect/
-- 
+
+
+```react
+const [starWarsData, setStarWarsData] = React.useState({})
+const [count, setCount] = React.useState(1)
+React.useEffect(function() {
+    fetch(`https://swaip.dev/api/people/${count}`)
+        .then(res => res.json())
+        .then(data => setStarWarsData(data))
+}, [count])
+return (
+    <div>
+        <h2>The count is {count}</h2>
+        <button onClick={() => setCount(prevCount => prevCount + 1)}>Get Next Character</button>
+        <pre>{JSON.stringify(starWarsData, null, 2)}</pre>
+    </div>
+)
+```
+
 
 
 
