--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -558,6 +558,7 @@ React.useEffect(function() {
         .then(res => res.json())
         .then(data => setStarWarsData(data))
 }, [count])
+// [count] - when the count changes
 return (
     <div>
         <h2>The count is {count}</h2>
@@ -566,6 +567,32 @@ return (
     </div>
 )
 ```
+
+### useEffect cleanup function
+**WindowTracker.js**
+```react
+React.useEffect(() => {
+    function watchWidth() {
+        console.log("Setting up...")
+        setWindowWidth(window.innerWidth)
+    }
+    window.addEventListener("resize", watchWidth)
+    return function() {
+        console.log("Cleaning up...")
+        window.removeEventListener("resize", watchWidth)
+    }
+}, [])
+return (
+    <h1>Window width: {windowWidth}</h1>
+)
+```
+
+**App.js**
+```react
+<button onClick={toggle}>Toggle WindowTracker</button>
+{show && <WindowTracker />}
+```
+
 
 
 
