--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -593,6 +593,19 @@ return (
 {show && <WindowTracker />}
 ```
 
+### Using an async/await function inside useEffect
+>useEffect takes a function as its parameter. If that function returns something, it needs to be a cleanup function. Otherwise, it should return nothing. If we make it an async function, it automatically retuns a promise instead of a function or nothing. Therefore, if you want to use async operations inside of useEffect, you need to define the function separately inside of the callback function, as seen below:
+
+```react
+React.useEffect(() => {
+    async function getMemes() {
+        const res = await fetch("https://api.imgflip.com/get_memes")
+        const data = await res.json()
+        setAllMemes(data.data.memes)
+    }
+    getMemes()
+}, [])
+```
 
 
 
