react part 1 finished

--- a/content/posts/20240110.md
+++ b/content/posts/20240110.md
@@ -1,7 +1,7 @@
 +++
 title = "React学习笔记: PART 1"
 date = "2024-01-10"
-description = ""
+description = "Notes from Scrimba's React (section 3: building a meme generator)"
 tags = [
     "study",
     "React"
@@ -594,7 +594,7 @@ return (
 ```
 
 ### Using an async/await function inside useEffect
->useEffect takes a function as its parameter. If that function returns something, it needs to be a cleanup function. Otherwise, it should return nothing. If we make it an async function, it automatically retuns a promise instead of a function or nothing. Therefore, if you want to use async operations inside of useEffect, you need to define the function separately inside of the callback function, as seen below:
+> useEffect takes a function as its parameter. If that function returns something, it needs to be a cleanup function. Otherwise, it should return nothing. If we make it an async function, it automatically retuns a promise instead of a function or nothing. Therefore, if you want to use async operations inside of useEffect, you need to define the function separately inside of the callback function, as seen below:
 
 ```react
 React.useEffect(() => {
